vemo-app/main/default/objects/Transaction__c/Transaction__c.object-meta.xml
<CustomObject>
    <label>Disbursement</label>
    <nameField>
        <displayFormat>DS-{0000}</displayFormat>
        <label>Disbursement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disbursements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>