vemo-app/main/default/objects/Transaction__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The Agreement related to this Disbursement.</inlineHelpText>
    <label>Agreement</label>
    <referenceTo>StudentProgram__c</referenceTo>
    <relationshipLabel>Disbursements</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>