vemo-app/main/default/objects/Transaction__c/fields/BalanceAmount__c.field-meta.xml
<CustomField>
    <fullName>BalanceAmount__c</fullName>
    <formula>IF( RecordType.Name == 'Disbursement',Amount__c,IF(RecordType.Name == 'Disbursement Refund',-Amount__c,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>