vemo-app/main/default/objects/Transaction__c/fields/Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked if Disbursement has been confirmed.</inlineHelpText>
    <label>Confirmed</label>
    <type>Checkbox</type>
</CustomField>