vemo-app/main/default/objects/Transaction__c/fields/Deleted__c.field-meta.xml
<CustomField>
    <fullName>Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this flag is checked, this disbursement is deleted and will be purged by an hourly job.  Necessary for school admins to be able to delete records</description>
    <inlineHelpText>If this flag is checked, this disbursement is deleted and will be purged by an hourly job</inlineHelpText>
    <label>Deleted</label>
    <type>Checkbox</type>
</CustomField>