vemo-app/main/default/objects/Transaction__c/fields/DisbursementPercentage__c.field-meta.xml
<CustomField>
    <fullName>DisbursementPercentage__c</fullName>
    <label>Disbursement Percentage</label>
    <precision>16</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>