vemo-app/main/default/objects/Transaction__c/fields/DisbursementRecordType__c.field-meta.xml
<CustomField>
    <fullName>DisbursementRecordType__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disbursement Record Type</label>
    <type>Text</type>
</CustomField>