vemo-app/main/default/objects/Transaction__c/fields/LongProgramName__c.field-meta.xml
<CustomField>
    <fullName>LongProgramName__c</fullName>
    <formula>Agreement__r.Program__r.LongProgramName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Field used in email communications.</inlineHelpText>
    <label>Long Program Name</label>
    <type>Text</type>
</CustomField>