vemo-app/main/default/objects/Transaction__c/fields/NotificationEmail__c.field-meta.xml
<CustomField>
    <fullName>NotificationEmail__c</fullName>
    <inlineHelpText>The address to send disbursement notification email.</inlineHelpText>
    <label>Notification Email</label>
    <type>Email</type>
</CustomField>