vemo-app/main/default/objects/Transaction__c/fields/OFACCheckDate__c.field-meta.xml
<CustomField>
    <fullName>OFACCheckDate__c</fullName>
    <inlineHelpText>The date the Office of Foreign Assets Control (OFAC) check was performed.</inlineHelpText>
    <label>OFAC Check Date</label>
    <type>Date</type>
</CustomField>