vemo-app/main/default/objects/Transaction__c/fields/OFACCheckPerformedBy__c.field-meta.xml
<CustomField>
    <fullName>OFACCheckPerformedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>User who performed the Office of Foreign Assets Control (OFAC) check.</inlineHelpText>
    <label>OFAC Check Performed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>