vemo-app/main/default/objects/Transaction__c/fields/ProgramID__c.field-meta.xml
<CustomField>
    <fullName>ProgramID__c</fullName>
    <formula>Agreement__r.Program__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProgramID</label>
    <type>Text</type>
</CustomField>