vemo-app/main/default/objects/Transaction__c/fields/ProgramName__c.field-meta.xml
<CustomField>
    <fullName>ProgramName__c</fullName>
    <formula>Agreement__r.Program__r.ProgramName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Field used in email communications.</inlineHelpText>
    <label>Program Name</label>
    <type>Text</type>
</CustomField>