vemo-app/main/default/objects/Transaction__c/fields/RecordLabel__c.field-meta.xml
<CustomField>
    <fullName>RecordLabel__c</fullName>
    <formula>Student__r.RecordLabel__c+''+Agreement__r.RecordLabel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Label</label>
    <type>Text</type>
</CustomField>