vemo-app/main/default/objects/Transaction__c/fields/RelatedSchedule__c.field-meta.xml
<CustomField>
    <fullName>RelatedSchedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If this Disbursement was created by a Disbursement Schedule, indicates the related Disbursement Schedule.</inlineHelpText>
    <label>Related Schedule</label>
    <referenceTo>TransactionSchedule__c</referenceTo>
    <relationshipLabel>Disbursements</relationshipLabel>
    <relationshipName>RelatedTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>