vemo-app/main/default/objects/Transaction__c/fields/ResultOfOFACCheck__c.field-meta.xml
<CustomField>
    <fullName>ResultOfOFACCheck__c</fullName>
    <inlineHelpText>The result of the Office of Foreign Assets Control (OFAC) check.</inlineHelpText>
    <label>Result of OFAC Check</label>
    <type>TextArea</type>
</CustomField>