vemo-app/main/default/objects/Transaction__c/fields/ScheduledAmount__c.field-meta.xml
<CustomField>
    <fullName>ScheduledAmount__c</fullName>
    <formula>Agreement__r.FundingAmountCertification__c  * DisbursementPercentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEPRECATEScheduled Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>