vemo-app/main/default/objects/Transaction__c/fields/SchoolName__c.field-meta.xml
<CustomField>
    <fullName>SchoolName__c</fullName>
    <formula>Agreement__r.Program__r.School__r.InstitutionShortName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Field used in email communications.</inlineHelpText>
    <label>School Name</label>
    <type>Text</type>
</CustomField>