vemo-app/main/default/objects/Transaction__c/fields/SchoolPortalLink__c.field-meta.xml
<CustomField>
    <fullName>SchoolPortalLink__c</fullName>
    <formula>Agreement__r.Program__r.StudentPortalLink__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Field used in email communications.</inlineHelpText>
    <label>School Portal Link</label>
    <type>Text</type>
</CustomField>