vemo-app/main/default/objects/Transaction__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Scheduled, Pending, Complete, or Cancelled.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TransactionStatus</valueSetName>
    </valueSet>
</CustomField>