vemo-app/main/default/objects/Transaction__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The Student related to this Disbursement.</inlineHelpText>
    <label>Student</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Disbursements</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>