vemo-app/main/default/objects/Transaction__c/fields/StudentVemoAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>StudentVemoAccountNumber__c</fullName>
    <formula>Agreement__r.Student__r.VemoAccountNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Field used in email communications.</inlineHelpText>
    <label>Student Vemo Account Number</label>
    <type>Text</type>
</CustomField>