vemo-app/main/default/objects/Transaction__c/fields/TransactionBatch__c.field-meta.xml
<CustomField>
    <fullName>TransactionBatch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The related Disbursement Batch.</inlineHelpText>
    <label>Transaction Batch</label>
    <referenceTo>TransactionBatch__c</referenceTo>
    <relationshipLabel>Disbursements</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>