vemo-app/main/default/objects/Transaction__c/fields/TransactionDateTime__c.field-meta.xml
<CustomField>
    <fullName>TransactionDateTime__c</fullName>
    <label>DEPRECATETransaction DateTime</label>
    <type>DateTime</type>
</CustomField>