vemo-app/main/default/objects/Transaction__c/recordTypes/Disbursement.recordType-meta.xml
<RecordType>
    <fullName>Disbursement</fullName>
    <active>true</active>
    <description>Represents a funding event in a contract. This is typically a transaction from an investor or school to the school (for tuition) or directly to the student (ex. stipend)</description>
    <label>Disbursement</label>
</RecordType>