vemo-app/main/default/objects/Transaction__c/recordTypes/DisbursementRefund.recordType-meta.xml
<RecordType>
    <fullName>DisbursementRefund</fullName>
    <active>true</active>
    <description>An exception that represents a reversal of a normal transaction</description>
    <label>Disbursement Refund</label>
</RecordType>