vemo-app/main/default/objects/Transaction__c/recordTypes/Fee.recordType-meta.xml
<RecordType>
    <fullName>Fee</fullName>
    <active>false</active>
    <description>Represents a payment from school or investor to Vemo</description>
    <label>Fee</label>
</RecordType>