vemo-app/main/default/objects/Transaction__c/recordTypes/FeeRefund.recordType-meta.xml
<RecordType>
    <fullName>FeeRefund</fullName>
    <active>false</active>
    <description>An exception that represents a reversal of a normal transaction</description>
    <label>Fee Refund</label>
</RecordType>