vemo-app/main/default/objects/Transaction__c/recordTypes/Payment.recordType-meta.xml
<RecordType>
    <fullName>Payment</fullName>
    <active>false</active>
    <description>Represents a transaction covering the student's income-based obligation in the ISA contract. This type of transaction does not occur until the student leaves school.</description>
    <label>Payment</label>
</RecordType>