vemo-app/main/default/objects/Transaction__c/recordTypes/PaymentRefund.recordType-meta.xml
<RecordType>
    <fullName>PaymentRefund</fullName>
    <active>false</active>
    <description>An exception that represents a reversal of a normal transaction</description>
    <label>Payment Refund</label>
</RecordType>