vemo-app/main/default/objects/Transaction__c/recordTypes/Remittance.recordType-meta.xml
<RecordType>
    <fullName>Remittance</fullName>
    <active>false</active>
    <description>Represents the portion of collected payments that are aggregated and sent back to the program investor. This is typically from Vemo to the school or investor</description>
    <label>Remittance</label>
</RecordType>