vemo-app/main/default/objects/Transaction__c/validationRules/TransactionFrozen.validationRule-meta.xml
<ValidationRule>
    <fullName>TransactionFrozen</fullName>
    <active>true</active>
    <errorConditionFormula>$Setup.GlobalSettings__c.ValidationRules__c &amp;&amp;
 !$Setup.ApprovalSettings__c.BypassTransactionFreeze__c &amp;&amp;
  ISPICKVAL(TransactionBatch__r.TransactionBatchStatus__c , "Freeze Transactions")</errorConditionFormula>
    <errorMessage>This transaction has been frozen at the batch level.  Please unfreeze the transactions before proceeding.</errorMessage>
</ValidationRule>