vemo-app/main/default/objects/Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TransactionDate__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Student__c</columns>
    <columns>Agreement__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>DATA__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>