vemo-app/main/default/objects/Transaction__c/listViews/Pending_Disbursement.listView-meta.xml
<ListView>
    <fullName>Pending_Disbursement</fullName>
    <columns>NAME</columns>
    <columns>TransactionDate__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Student__c</columns>
    <columns>Agreement__c</columns>
    <columns>TransactionBatch__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Scheduled,Pending</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Transaction__c.Disbursement,Transaction__c.DisbursementRefund</value>
    </filters>
    <filters>
        <field>Amount__c</field>
        <operation>greaterOrEqual</operation>
        <value>0</value>
    </filters>
    <label>Pending Disbursement</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>