vemo-app/main/default/objects/Transaction__c/listViews/School_Transactions.listView-meta.xml
<ListView>
    <fullName>School_Transactions</fullName>
    <columns>NAME</columns>
    <columns>TransactionDate__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Student__c</columns>
    <columns>Agreement__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>School Transactions</label>
    <sharedTo>
        <allCustomerPortalUsers/>
        <allInternalUsers/>
    </sharedTo>
</ListView>